! they did it again - so imdb::comment_split() was broken
! imdb photo stuff was broken
+ runtimes and genres know have an additional source as fallback
! imdb::votes() was broken due to site changes
! imdb::seasons() always returned 1 (if there were seasons) for IMDB switched order
* cleaned up imdb::prodNotes() result
* cleaning up double-paragraphs in imdb::plotoutline()

v2.0.3 (17.10.2010)
-------------------
! some after-fixes for the last "big run" include imdb methods plotoutline(),
  runtime_all()
! same for imdb_person::name()
* imdb::plotoutline() was taken from storyline with the recent changes - fixed it up
+ but since we had a working storyline, that method was added as storyline()
! imdb::mainPictures() was also broken by the last site changes - fixed
! mdb_request class did not inherit force_agent and trigger_referer values from
  mdb_config and thus issued PHP notices

v2.0.2 (10.10.2010)
-------------------
! imdbsearch: some search results missed the year (if it was consisting of more than a plain
  year, e.g. something like "2001/II")
! imdb::prodNotes: lastUpdate was broken due to a site change
+ movies: added imdb::locations() to retrieve details on the filming locations.
  pilot::locations() is just a wrapper to this requiring full fallback configured.
! mpaa_reason returned wrong text (tnx to dblume for report and fix!)
+ added method is_serial() to the movie classes to determine whether the selected
  entry is part of a TV series
! again site changes at IMDB - fixed imdb::title_year(), imdb::thumbphoto(), and
  imdb::country() with code sent by moonface (tnx!)
! imdb::languages() (and thus imdb::language() as well) had been broken - fixed.
+ added config option to set up the user agent "manually"
! if an actor had a too long movie list, no results where shown (there seems to be
  a limitation in preg_match)
! HUGE SITE CHANGES ON IMDB! Thanks to your contributions, we got many stuff fixed